Prettierin tekemät korjaukset. Typescriptin päivitys ja ui luokkien siirtelyä ja jäsentelyä sekä huono ensimmäinen versio react table 8:n taulukosta globaalilla haulla. Paljon on vielä kesken.

--- a/varda-rekisterointi/src/frontend/virkailija/components/RekisteroinnitBase/RekisteroinnitBase.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/components/RekisteroinnitBase/RekisteroinnitBase.module.css
@@ -1,6 +1,7 @@
-.rekisteroinnit {
-    position: relative;
-    margin: 2em 4em;
+.pageBase {
+    background: #F2F2F2;
+    padding: 0 4rem 0 4rem;
+    min-height: 87vh;
 }
 
 .rekisterointiOsio {
