update registration table styles

--- a/varda-rekisterointi/src/frontend/virkailija/components/RekisteroinnitBase/RekisteroinnitBase.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/components/RekisteroinnitBase/RekisteroinnitBase.module.css
@@ -72,15 +72,15 @@ a.nappiDisabled {
     opacity: 0.5;
 }
 
-.header {
+.headerPrefix {
     text-transform: capitalize;
 }
 
 .registrationTypeButtons {
-    padding: 2rem 0;
+    padding-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .registrationTypeButton {
     cursor: pointer;
-    text-transform: capitalize;
 }
