--- a/varda-rekisterointi/src/frontend/virkailija/components/Table/Table.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/components/Table/Table.module.css
@@ -66,3 +66,26 @@
 .selectedTila {
     cursor: default;
 }
+
+.expandedRow {
+    border-bottom: 1px solid #dedede;
+}
+
+.expandedCell {
+    vertical-align: top;
+}
+
+.infoContainer {
+    margin: 1rem 0;
+    padding: 0 5px;
+}
+
+.infoHeader {
+    font-size: 16px;
+    margin: 1rem 0;
+}
+
+.infoLabel {
+    font-size: 16px;
+    margin: 1rem 0 0;
+}
