--- a/varda-rekisterointi/src/frontend/virkailija/components/Table/Table.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/components/Table/Table.module.css
@@ -7,6 +7,7 @@
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.17);
     border-radius: 3px;
     background: #ffffff;
+    min-height: 50vh;
 }
 
 .filterInput {
@@ -88,4 +89,13 @@
 .infoLabel {
     font-size: 16px;
     margin: 1rem 0 0;
+}
+
+.emptyList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 3rem 0;
+    color: #999;
+    width: 100%;
 }
