fix pagination visuals and try to reset page on filter change

--- a/varda-rekisterointi/src/frontend/virkailija/components/Table/Pagination.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/components/Table/Pagination.module.css
@@ -1,13 +1,14 @@
 .container {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin: 1rem 0;
     box-sizing: border-box;
 }
 
 .container button {
-    width: 24px;
+    min-width: 24px;
     height: 24px;
     margin: 0.5rem;
     font-weight: 700;
