--- a/varda-rekisterointi/src/frontend/virkailija/components/Table/Pagination.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/components/Table/Pagination.module.css
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -23,6 +24,7 @@
 
 .page:disabled {
     color: #aeaeae;
+    cursor: default;
 }
 
 .currentPage {
@@ -30,4 +32,23 @@
     background: #0a789c;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.0001), inset 0px 1px 2px rgba(0, 0, 0, 0.195312);
     border-radius: 3px;
+}
+
+.pageSizeContainer {
+    position: absolute;
+    right: 0;
+    top: 0;
+    line-height: 40px;
+    color: #666;
+}
+
+.pageSizeSelect {
+    border: none;
+    appearance: none;
+    width: 3rem;
+    background: url("data:image/svg+xml;utf8,<svg fill='gray' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>")
+        no-repeat right center;
+    color: #666;
+    text-align: right;
+    padding-right: 20px;
 }
