highlight registration rows to indicate they can be clicked

--- a/varda-rekisterointi/src/frontend/virkailija/components/Table/Table.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/components/Table/Table.module.css
@@ -60,8 +60,18 @@
     padding-left: 40px;
 }
 
+.row {
+    position: relative;
+    cursor: pointer;
+}
+
+.row:hover {
+    box-shadow: 0px 9px 4px -6px #CCC;
+}
+
 .evenRow {
-    background: #F5F5F5;
+    box-sizing: border-box;
+    background-color: #F5F5F5;
 }
 
 .selectedTila {
