add approval handling for registrations

--- a/varda-rekisterointi/src/frontend/virkailija/components/RekisteroinnitBase/RekisteroinnitBase.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/components/RekisteroinnitBase/RekisteroinnitBase.module.css
@@ -84,3 +84,11 @@ a.nappiDisabled {
 .registrationTypeButton {
     cursor: pointer;
 }
+
+.toast > div {
+    background-color: #43A047 !important;
+    border-radius: 3px;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+  }
+  
