--- a/varda-rekisterointi/src/frontend/virkailija/components/RekisteroinnitBase/RekisteroinnitBase.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/components/RekisteroinnitBase/RekisteroinnitBase.module.css
@@ -1,7 +1,8 @@
 .pageBase {
-    background: #F2F2F2;
+    background: #f2f2f2;
     padding: 1px 4rem 0;
     min-height: 87vh;
+    position: relative;
 }
 
 .rekisterointiOsio {
@@ -30,8 +31,8 @@
 
 @media screen and (max-width: 800px) {
     .rekisteroinnit {
-         margin-left: 1em;
-         margin-right: 1em;
+        margin-left: 1em;
+        margin-right: 1em;
     }
     .tilaTabit {
         margin-left: 0;
@@ -60,8 +61,8 @@
 a.nappi {
     height: 100%;
     border-radius: 4px;
-    border-color: #0A789C;
-    background-color: #0A789C;
+    border-color: #0a789c;
+    background-color: #0a789c;
     padding: 6px 16px;
     color: #ffffff;
     text-decoration: none;
@@ -85,10 +86,12 @@ a.nappiDisabled {
     cursor: pointer;
 }
 
-.toast > div {
-    background-color: #43A047 !important;
-    border-radius: 3px;
+.toast {
+    --toastify-color-success: #43a047;
+    --toastify-font-family: 'Roboto', sans-serif;
     font-weight: 600;
-    font-family: 'Roboto', sans-serif;
-  }
-  
+}
+
+.toast > div {
+    border-radius: 3px;
+}
