rename varda specific templates

--- a/varda-rekisterointi/src/main/resources/templates/varda/rekisteroityminen-kunta.html
+++ b/varda-rekisterointi/src/main/resources/templates/varda/rekisteroityminen-kunta.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html layout:decorate="~{email/pohja}">
+<html layout:decorate="~{varda/pohja}">
 <head>
     <title th:text="#{rekisteroityminen.kunta.otsikko}">otsikko</title>
 </head>
