use html email templates with other types of registrations as well

--- a/varda-rekisterointi/src/main/resources/templates/generic/taskien-virheraportti.html
+++ b/varda-rekisterointi/src/main/resources/templates/generic/taskien-virheraportti.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html layout:decorate="~{varda/pohja}">
+<html layout:decorate="~{generic/pohja}">
 <head>
     <title th:text="#{taskien-virheraportti.otsikko}">otsikko</title>
 </head>
