--- a/varda-rekisterointi/src/main/resources/templates/varda/rekisteroityminen-hyvaksytty.html
+++ b/varda-rekisterointi/src/main/resources/templates/varda/rekisteroityminen-hyvaksytty.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html layout:decorate="~{varda/pohja-kaikki-kielet}">
 <head>
-    <title th:text="#{rekisteroityminen.hyvaksytty.otsikko}">otsikko</title>
+    <title th:text="#{varda.rekisteroityminen.hyvaksytty.otsikko}">otsikko</title>
 </head>
 <body>
 <div layout:fragment="sisalto">
     <div th:each="locale,iterStat: ${locales}">
         <span th:text="${messageSource.getMessage('hei', null, locale)}">Hei</span>,<br>
-        <span th:text="${messageSource.getMessage('rekisteroityminen.hyvaksytty.teksti', organisaatioNimi, locale)}">teksti</span>
-        <p th:text="${messageSource.getMessage('rekisteroityminen.hyvaksytty.lisatieto', null, locale)}">lisätieto</p>
+        <span th:text="${messageSource.getMessage('varda.rekisteroityminen.hyvaksytty.teksti', organisaatioNimi, locale)}">teksti</span>
+        <p th:text="${messageSource.getMessage('varda.rekisteroityminen.hyvaksytty.lisatieto', null, locale)}">lisätieto</p>
         <span th:text="${messageSource.getMessage('terveisin', null, locale)}">Terveisin</span><br/>
-        <span th:text="${messageSource.getMessage('asiakaspalvelu', null, locale)}">Vardan asiakaspalvelu</span><br/>
+        <span th:text="${messageSource.getMessage('varda.asiakaspalvelu', null, locale)}">Vardan asiakaspalvelu</span><br/>
         <span th:text="${messageSource.getMessage('opetushallitus', null, locale)}">Opetushallitus</span>
         <div th:if="${!iterStat.last}">***</div>
     </div>
