new content for the unhandled registrations email

--- a/varda-rekisterointi/src/main/resources/templates/generic/kasittelemattomat.html
+++ b/varda-rekisterointi/src/main/resources/templates/generic/kasittelemattomat.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html layout:decorate="~{varda/pohja}">
+<html layout:decorate="~{generic/pohja-yhteisetpalvelut}">
 <head>
-    <title th:text="#{varda.rekisteroityminen.kunta.otsikko}">otsikko</title>
+    <title th:text="#{generic.rekisteroityminen.kasittelemattomat.otsikko}">otsikko</title>
 </head>
 <body>
 <div layout:fragment="sisalto">
