OH-872 new email templates for jotpa

--- a/varda-rekisterointi/src/main/resources/templates/generic/pohja.html
+++ b/varda-rekisterointi/src/main/resources/templates/generic/pohja.html
@@ -7,7 +7,7 @@
 <div layout:fragment="sisalto">
     sisältö
 </div>
-<span th:text="#{terveisin}">Terveisin</span><br/>
+<span th:text="#{generic.terveisin}">Terveisin</span><br/>
 <span th:text="#{opetushallitus}">Opetushallitus</span>
 </body>
 </html>
