--- a/varda-rekisterointi/src/main/resources/templates/generic/pohja-yhteisetpalvelut.html
+++ b/varda-rekisterointi/src/main/resources/templates/generic/pohja-yhteisetpalvelut.html
@@ -7,8 +7,7 @@
 <div layout:fragment="sisalto">
     sisältö
 </div>
-<span th:text="#{terveisin}">Terveisin</span><br/>
-<span th:text="#{yhteisetpalvelut}">Yhteiset palvelut</span><br/>
+<span th:text="#{generic.terveisin}">Terveisin</span><br/>
 <span th:text="#{opetushallitus}">Opetushallitus</span>
 </body>
 </html>
