--- a/varda-rekisterointi/src/main/resources/templates/generic/rekisteroityminen-hylatty.html
+++ b/varda-rekisterointi/src/main/resources/templates/generic/rekisteroityminen-hylatty.html
@@ -7,10 +7,10 @@
 <div layout:fragment="sisalto">
     <div th:each="locale,iterStat: ${locales}">
         <span th:text="${messageSource.getMessage('hei', null, locale)}">Hei</span>,<br>
-        <span th:text="${messageSource.getMessage('generic.rekisteroityminen.hylatty.teksti', new Object[]{organisaatioNimi , perustelu}, locale)}">teksti</span>
+        <span th:text="${messageSource.getMessage('generic.rekisteroityminen.hylatty.teksti', perustelu, locale)}">teksti</span>
         <p th:text="${messageSource.getMessage('generic.rekisteroityminen.hylatty.lisatieto', null, locale)}">lisätieto</p>
-        <span th:text="${messageSource.getMessage('terveisin', null, locale)}">Terveisin</span><br/>
-        <span th:text="${messageSource.getMessage('opetushallitus', null, locale)}">Opetushallitus</span>
+        <span th:text="${messageSource.getMessage('generic.terveisin', null, locale)}">Terveisin</span><br/>
+        <span th:text="${messageSource.getMessage('generic.jotpa', null, locale)}">Jotpa</span>
         <div th:if="${!iterStat.last}">***</div>
     </div>
 </div>
