--- a/varda-rekisterointi/src/main/resources/templates/generic/rekisteroityminen-hyvaksytty.html
+++ b/varda-rekisterointi/src/main/resources/templates/generic/rekisteroityminen-hyvaksytty.html
@@ -9,7 +9,7 @@
         <span th:text="${messageSource.getMessage('hei', null, locale)}">Hei</span>,<br>
         <span th:text="${messageSource.getMessage('generic.rekisteroityminen.hyvaksytty.teksti', organisaatioNimi, locale)}">teksti</span>
         <p th:text="${messageSource.getMessage('generic.rekisteroityminen.hyvaksytty.lisatieto', null, locale)}">lisätieto</p>
-        <span th:text="${messageSource.getMessage('terveisin', null, locale)}">Terveisin</span><br/>
+        <span th:text="${messageSource.getMessage('generic.terveisin', null, locale)}">Terveisin</span><br/>
         <span th:text="${messageSource.getMessage('opetushallitus', null, locale)}">Opetushallitus</span>
         <div th:if="${!iterStat.last}">***</div>
     </div>
