--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/OsoitteetSivu.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/OsoitteetSivu.module.css
@@ -9,147 +9,56 @@
     --color-gray-gray-lighten-1: #999;
     --color-gray-gray-lighten-3: #CCC;
     --color-gray-gray-lighten-6: #F0F3F7;
+    --text-text-paragraph: #666;
+
+    --content-width: 1152px;
 }
 
 body {
-    background: var(--color-gray-gray-lighten-6, #F0F3F7);
+    margin: 0;
+    background: var(--color-gray-gray-lighten-6);
 }
 
-.Container {
-    /* Layout */
-    max-width: 1440px;
-    min-width: 1000px;
-    margin: 0px calc((1440px - 1152px) / 2);
+.OsoitteetSivu {
+    display: flex;
+    flex-direction: column;
+    color: var(--color-neutral-black);
 
-    /* Style */
-    color: var(--color-neutral-black, #2A2A2A);
+    background: var(--color-gray-gray-lighten-6);
     font-family: Roboto, Arial Unicode MS, Arial, sans-serif;
 }
 
-.Title {
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 33px;
+.ContentContainer {
+    width: 100%;
+    max-width: var(--content-width);
 }
 
-.SubtitleRivi {
-    /* Layout */
+.Header {
+    background: var(--color-neutral-white);
+    height: 71px;
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    gap: 16px;
-}
-.Subtitle {
-    flex-grow: 1;
-
-    color: var(--color-primary-blue);
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-}
-
-.Subtitle span {
-    color: var(--color-primary-blue, #0A789C);
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-}
-
-.KohderyhmaSelections {
-    /* Layout */
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 16px;
-}
-
-.KohderyhmaColumn {
-    /* Layout */
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16px;
-}
-
-.Kohderyhma {
-    /* Layout */
-    display: flex;
-    width: 372px;
-    padding: 24px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-
-    /* Style */
-    color: var(--color-neutral-black);
-    border-radius: 3px;
-    background: #FFF;
-    box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.17);
-}
-
-.Kohderyhma.Selected {
-    border-radius: 3px;
-    border: 2px solid var(--color-primary-blue);
-    background: #FFF;
-    box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.17);
-}
-.Kohderyhma.Selected h3 {
-    color: var(--color-primary-blue);
-}
-
-.Kohderyhma.Disabled {
-    border-radius: 3px;
-    border: 2px solid var(--color-gray-gray-lighten-3);
-    background: #FFF;
-    box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.17);
-
-    color: var(--color-gray-gray-lighten-1);
-}
-.Kohderyhma.Disabled h3 {
-    color: var(--color-gray-gray-lighten-1);
-}
-
-.KohderyhmaOtsikko {
-    display: flex;
-    width: 324px;
-    align-items: flex-start;
-    gap: 16px;
-}
-
-.KohderyhmaOtsikko h3 {
-    /* Medium 20 */
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-}
-
-.KohderyhmaKuvaus {
-    /* Layout */
-    display: flex;
-    padding-left: 36px;
     align-items: center;
-    gap: 8px;
-    align-self: stretch;
+    justify-content: center;
+    text-align: center;
 
-    /* Regular 14 */
-    font-size: 14px;
+    color: var(--text-text-paragraph, #666);
+    /* Regular 16 */
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 21px; /* 150% */
-    letter-spacing: 0.035px;
+    line-height: 24px; /* 150% */
+
 }
 
-.ButtonRow {
-    display: flex;
-    align-items: flex-end;
-    gap: 16px;
-    height: 83px;
+.Header p {
+    width: 100%;
 }
-.ButtonRow button[variant=outlined] {
-    background-color: white;
+
+.MainContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    padding: 40px 0;
 }
