--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -127,3 +127,44 @@
 .ButtonRow button[variant=outlined] {
     background-color: white;
 }
+
+.RajausAccordion {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background: var(--color-neutral-white);
+    box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.17);
+}
+
+.RajausAccordion .AccordionTitle {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+
+    width: 100%;
+    height: 72px;
+    box-sizing: border-box;
+    padding: 0 32px;
+}
+.RajausAccordion .AccordionTitle h3 {
+}
+.RajausAccordion .AccordionTitle span {
+    flex-grow: 1;
+    text-align: right;
+}
+.RajausAccordion .AccordionTitle .AccordionButton {
+}
+
+.RajausAccordion .AccordionContentContainer {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 32px;
+}
+.RajausAccordion .AccordionContentContainer .AccordionContent {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 24px 0 32px 0;
+    border-top: 1px solid var(--color-gray-gray-lighten-3);
+}
