--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
@@ -33,7 +33,6 @@
     height: 34px;
 }
 
-.CheckboxColumn {
-    max-width: 0.001%;
-    white-space: nowrap;
+.Checkbox {
+    padding-right: 8px;
 }
