--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -148,11 +148,24 @@
     box-sizing: border-box;
     padding: 0 32px;
 }
+
 .RajausAccordion .AccordionTitle h3 {
+    color: var(--color-neutral-black);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
-.RajausAccordion .AccordionTitle span {
+
+.RajausAccordion .AccordionTitle .AccordionSelectionDescription {
     flex-grow: 1;
     text-align: right;
+
+    color: var(--color-gray-gray);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
 }
 .RajausAccordion .AccordionTitle .AccordionButton {
 }
