--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -164,6 +164,9 @@
 .RajausAccordion .AccordionTitle .AccordionSelectionDescription {
     flex-grow: 1;
     text-align: right;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     color: var(--color-gray-gray);
     font-size: 16px;
@@ -184,4 +187,16 @@
     box-sizing: border-box;
     padding: 24px 0 32px 0;
     border-top: 1px solid var(--color-gray-gray-lighten-3);
+}
+
+.RajausAccordion .AccordionContentContainer ul {
+    column-count: 3;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.RajausAccordion .AccordionContentContainer ul li {
+    padding-left: 0;
+    padding-top: 4px;
+    margin-bottom: 8px;
 }
