--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
@@ -31,8 +31,8 @@
     line-height: 24px; /* 150% */
 }
 
-.Body tr:nth-child(even) { background: var(--color-neutral-white); }
-.Body tr:nth-child(odd) { background: var(--FAFAFA); }
+.Body tr:nth-child(odd) { background: var(--color-neutral-white); }
+.Body tr:nth-child(even) { background: var(--FAFAFA); }
 
 .Body tr td {
     padding: 8px 24px 8px 8px;
@@ -52,10 +52,10 @@
     width: 100%;
     height: 100%;
 }
-tr:nth-child(even) .Fade:before {
+tr:nth-child(odd) .Fade:before {
     background: linear-gradient(to right, transparent 90%, var(--color-neutral-white) 95%);
 }
-tr:nth-child(odd) .Fade:before {
+tr:nth-child(even) .Fade:before {
     background: linear-gradient(to right, transparent 90%, var(--FAFAFA) 95%);
 }
 
