--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     overflow-x: scroll;
     white-space: nowrap;
+    height: calc(44px + 10 * 50px);
 }
 
 .Table {
@@ -9,6 +10,7 @@
 }
 
 .Header {
+    height: 44px;
     color: var(--color-neutral-black);
     font-size: 16px;
     font-style: normal;
