--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -182,7 +182,12 @@
     box-sizing: border-box;
     padding: 0 32px;
 }
+
 .RajausAccordion .AccordionContentContainer .AccordionContent {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
     width: 100%;
     box-sizing: border-box;
     padding: 24px 0 32px 0;
@@ -190,16 +195,13 @@
 }
 
 .SelectAll {
-    margin-top: 24px;
-    margin-bottom: 24px;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .RajausRyhmat {
     border-bottom: 1px solid var(--color-gray-gray-lighten-3);
-    padding-top: 24px;
     padding-bottom: 24px;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .RajausRyhmat label {
