OSTJ-193 Tyhjennä valinnat button for oppilaitostyyppi filter

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/OsoitteetSivu.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/OsoitteetSivu.module.css
@@ -12,6 +12,7 @@
     --text-text-paragraph: #666;
     --text-text-heading: #2A2A2A;
 
+    --color-semantics-disabled: #999;
     --color-semantics-partial: #FFD024;
     --color-semantics-error: #DB2828;
 
