--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosView.module.css
@@ -17,12 +17,14 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 48px;
+    height: 40px;
+    padding-bottom: 8px;
     border-bottom: 1px solid var(--color-gray-gray-lighten-3);
 }
 
 .TitleRow .Title {
     flex-grow: 1;
+    align-self: flex-start;
 
     display: flex;
     flex-direction: row;
