OSTJ-193 Allow searching by perusopetuksen vuosiluokat
Also sync vuosiluokat koodisto to local database

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/OsoitteetSivu.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/OsoitteetSivu.module.css
@@ -5,6 +5,7 @@
     --color-neutral-white: #FFF;
     --FAFAFA: #FAFAFA;
     --color-primary-blue: #0A789C;
+    --color-primary-blue-lighten-4: #DEF2FF;
     --color-gray-gray: #666;
     --color-gray-gray-lighten-1: #999;
     --color-gray-gray-lighten-3: #CCC;
