--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -193,6 +193,9 @@
     padding: 24px 0 32px 0;
     border-top: 1px solid var(--color-gray-gray-lighten-3);
 }
+.RajausAccordion .AccordionContentContainer .AccordionContent > * {
+    width: 100%;
+}
 
 .SelectAll {
     font-weight: 500;
@@ -241,4 +244,10 @@
 
 .FlexRow .FlexGrow {
     flex-grow: 1;
+}
+
+.FlexCol {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
