--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -145,7 +145,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 16px;
 
     width: 100%;
     height: 72px;
@@ -154,6 +153,8 @@
 }
 
 .RajausAccordion .AccordionTitle h3 {
+    flex-grow: 1;
+
     color: var(--color-neutral-black);
     font-size: 20px;
     font-style: normal;
@@ -162,11 +163,11 @@
 }
 
 .RajausAccordion .AccordionTitle .AccordionSelectionDescription {
-    flex-grow: 1;
     text-align: right;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    padding-right: 16px;
+    width: 504px;
 
     color: var(--color-gray-gray);
     font-size: 16px;
@@ -174,6 +175,23 @@
     font-weight: 400;
     line-height: 24px;
 }
+
+.Fade {
+    position: relative;
+}
+
+.Fade:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.Fade:before {
+    background: linear-gradient(to right, transparent calc(100% - 16px), var(--color-neutral-white) 100%);
+}
+
 .RajausAccordion .AccordionTitle .AccordionButton {
 }
 
