OSTJ-193 Tyhjennä button to reset all search params

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -125,7 +125,7 @@
 .ButtonRow {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: center;
     gap: 16px;
 }
 .ButtonRow button[variant='outlined'] {
