--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/RajausAccordion.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/RajausAccordion.module.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 16px;
 
     width: 100%;
     height: 72px;
@@ -32,7 +33,6 @@
     text-align: right;
     white-space: nowrap;
     overflow: hidden;
-    padding-right: 16px;
     width: 504px;
 
     color: var(--color-gray-gray);
@@ -55,7 +55,7 @@
     height: 100%;
 }
 .Fade:before {
-    background: linear-gradient(to right, transparent calc(100% - 16px), var(--color-neutral-white) 100%);
+    background: linear-gradient(to right, transparent calc(100% - 96px), var(--color-neutral-white) 100%);
 }
 
 .RajausAccordion .AccordionTitle .AccordionButton {
