OSTJ-193 Sijainti filter
* Make search function a POST resource as the request size becomes too large with kunta selections

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -118,6 +118,12 @@
     letter-spacing: 0.035px;
 }
 
+.Rajaukset {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
 .ErrorRow {
     align-self: baseline;
 }
