OSTJ-193 Show cursor as a pointer on clickable dropdown elements

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SelectDropdown.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SelectDropdown.module.css
@@ -18,6 +18,7 @@
     gap: 8px;
     height: 34px;
     color: var(--color-gray-gray);
+    cursor: pointer;
 
     /* Regular 16 */
     font-size: 16px;
@@ -52,4 +53,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
+}
+
+.Selection svg {
+    cursor: pointer;
 }
