--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    gap: 16px;
+    gap: 12px;
 }
 
 .KohderyhmaColumn {
@@ -52,7 +52,7 @@
 .Kohderyhma {
     /* Layout */
     display: flex;
-    width: 372px;
+    width: 324px;
     padding: 24px;
     flex-direction: column;
     align-items: flex-start;
@@ -64,6 +64,10 @@
     background: #fff;
     box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.17);
     border: 2px solid var(--color-neutral-white);
+}
+
+.Kohderyhma p {
+    margin: 0;
 }
 
 .Kohderyhma.Selected {
