OSTJ-194 Indent Kohderyhmä title and description a bit

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -66,6 +66,10 @@
     border: 2px solid var(--color-neutral-white);
 }
 
+.Kohderyhma label {
+    gap: 16px;
+}
+
 .Kohderyhma p {
     margin: 0;
 }
