OSTJ-201 Stule buttons according to design

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosView.module.css
@@ -63,3 +63,13 @@
     font-weight: 500;
     line-height: normal;
 }
+
+.ButtonRow {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+}
+.ButtonRow button[variant='outlined'] {
+    background-color: white;
+}
