--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
@@ -98,3 +98,19 @@
 .ViestiFooter strong {
     font-weight: 700;
 }
+
+.Error input {
+    border-color: var(--color-semantics-error);
+    border-width: 2px;
+}
+
+.Error .Viesti {
+    border-width: 2px;
+    border-color: var(--color-semantics-error);
+}
+
+.Error p {
+    color: var(--color-semantics-error);
+    font-size: 14px;
+    margin: 8px 0 0 0;
+}
