--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiStatusView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiStatusView.module.css
@@ -1,6 +1,5 @@
 .ModalishBox {
     min-width: 700px;
-    border-top: 4px solid var(--color-semantics-partial);
     border-radius: 3px;
     background: var(--color-neutral-white);
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.17);
@@ -10,6 +9,13 @@
     flex-direction: column;
     padding: 32px 0px 48px 0px;
     gap: 40px;
+}
+
+.ModalishBox.Queued {
+    border-top: 4px solid var(--color-semantics-partial);
+}
+.ModalishBox.Sent {
+    border-top: 4px solid var(--color-primary-blue);
 }
 
 .ModalishBox .Content {
