OSTJ-201 Add generic error page for indicating unexpected errors in Osoitepalvelu

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiStatusView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiStatusView.module.css
@@ -17,6 +17,9 @@
 .ModalishBox.Sent {
     border-top: 4px solid var(--color-primary-blue);
 }
+.ModalishBox.Error{
+    border-top: 4px solid var(--color-semantics-error);
+}
 
 .ModalishBox .Content {
     width: 478px;
