--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
@@ -5,12 +5,9 @@
     height: calc(44px + 10 * 50px);
 }
 
-.Table {
-    border-spacing: 0;
-}
-
 .Header {
-    height: 44px;
+    position: sticky;
+    display: flex;
     color: var(--color-neutral-black);
     font-size: 16px;
     font-style: normal;
@@ -18,14 +15,15 @@
     line-height: normal;
 }
 
-.Header tr td {
-    border-bottom: 1px solid var(--color-gray-gray-lighten-3);
+.Header > div {
+    flex-shrink: 0;
     background: var(--color-neutral-white);
+    border-bottom: 1px solid var(--color-gray-gray-lighten-3);
     padding: 16px 24px 10px 8px;
-    height: 18px;
 }
 
 .Body {
+    display: flex;
     /* Regular 16 */
     font-size: 16px;
     font-style: normal;
@@ -33,13 +31,23 @@
     line-height: 24px; /* 150% */
 }
 
-.Body tr:nth-child(odd) { background: var(--color-neutral-white); }
-.Body tr:nth-child(even) { background: var(--FAFAFA); }
+.Even {
+    background: var(--color-neutral-white);
+}
+.Odd {
+    background: var(--FAFAFA);
+}
 
-.Body tr td {
+.Body > div {
+    flex-shrink: 0;
     padding: 8px 24px 8px 8px;
     height: 34px;
+    line-height: 34px;
     overflow: hidden;
+}
+
+.Body label {
+    vertical-align: middle;
 }
 
 .Fade {
@@ -47,17 +55,17 @@
 }
 
 .Fade:before {
-    content: "";
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 }
-tr:nth-child(odd) .Fade:before {
+.Even .Fade:before {
     background: linear-gradient(to right, transparent 90%, var(--color-neutral-white) 95%);
 }
-tr:nth-child(even) .Fade:before {
+.Odd .Fade:before {
     background: linear-gradient(to right, transparent 90%, var(--FAFAFA) 95%);
 }
 
@@ -65,7 +73,16 @@ tr:nth-child(even) .Fade:before {
     padding-right: 8px;
 }
 
-.ColumnCheckbox { max-width: 448px; }
-.ColumnEmail { max-width: 344px; }
-.ColumnYritysmuoto { max-width: 160px; }
-.ColumnOid, .ColumnOsoite { max-width: 240px; }
+.ColumnCheckbox {
+    width: 448px;
+}
+.ColumnEmail {
+    width: 344px;
+}
+.ColumnShortInfo {
+    width: 160px;
+}
+.ColumnOid,
+.ColumnOsoite {
+    width: 240px;
+}
