--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ErrorBanner.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ErrorBanner.module.css
@@ -28,3 +28,16 @@
 .Banner.Error svg path {
     fill: var(--color-neutral-white);
 }
+
+.CloseButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    outline: inherit;
+    cursor: pointer;
+}
