--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
@@ -174,6 +174,7 @@
 
 .Attachments {
     display: flex;
+    align-items: center;
     gap: 8px;
 }
 
@@ -202,4 +203,23 @@
     font: inherit;
     outline: inherit;
     cursor: pointer;
+}
+
+.ProgressBar {
+    width: 100%;
+    background-color: var(--color-primary-blue-lighten-4);
+    margin-bottom: 1rem;
+}
+
+.ProgressBar > div {
+    padding: 4px 4px 4px 8px;
+    color: var(--color-neutral-white);
+    font-weight: 700;
+    background-color: var(--color-primary-blue);
+}
+
+.ModalButtons {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
