OPHYK-78 make search result checkboxes toggleable

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/Checkbox.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/Checkbox.module.css
@@ -1,4 +1,4 @@
-.Checkbox {
+.Label {
     height: 24px;
 
     display: inline-flex;
@@ -9,21 +9,16 @@
     cursor: pointer;
 }
 
-/* Visual focus effect for the icon as the true input is hidden */
-.Checkbox .VisuallyHiddenInput:focus + svg {
-    border-color: var(--color-primary-blue);
-    box-shadow: 0 0 0 3px var(--color-primary-blue);
+.Checkbox {
+    width: 20px;
+    height: 20px;
+    accent-color: var(--color-primary-blue);
+    vertical-align: sub;
+    cursor: pointer;
+    margin: 0;
 }
 
-/* The input has to be hidden visually, but still accessible for e.g. screen readers and keyboard navigation */
-.VisuallyHiddenInput {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-    white-space: nowrap;
+.Checkbox:focus {
+    border-color: var(--color-primary-blue);
+    box-shadow: 0 0 0 3px var(--color-primary-blue);
 }
