--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/HakutulosTable.module.css
@@ -52,21 +52,7 @@
 
 .Fade {
     position: relative;
-}
-
-.Fade:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-.Even .Fade:before {
-    background: linear-gradient(to right, transparent 90%, var(--color-neutral-white) 95%);
-}
-.Odd .Fade:before {
-    background: linear-gradient(to right, transparent 90%, var(--FAFAFA) 95%);
+    mask-image: linear-gradient(90deg, #000 80%, transparent);
 }
 
 .Checkbox {
