OPHYK-77 remove retrying for email status and add spinner for sending since it's done synchronously and now requires at least two requests to viestinvalitys

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
@@ -224,3 +224,9 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.SendSpinner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
