eject CRA and add start script

--- a/varda-rekisterointi/src/main/resources/templates/error/error.html
+++ b/varda-rekisterointi/src/main/resources/templates/error/error.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="/virheTyylit.css" rel="stylesheet"/>
+    <link href="/varda-rekisterointi/virheTyylit.css" rel="stylesheet"/>
 </head>
 <body>
     <div class="VirheKirjautunut">
         <div class="VirheKirjautunutTausta">
             <div>
-                <img src="/sad.png" alt="" />
+                <img src="/varda-rekisterointi/sad.png" alt="" />
             </div>
             <span th:text="#{rekisteroityminen.virhesivu.yleinen.teksti}" />
         </div>
