--- a/varda-rekisterointi/public/virheTyylit.css
+++ b/varda-rekisterointi/public/virheTyylit.css
@@ -19,7 +19,7 @@
 .VirheKirjautunutTausta {
     width: 820px;
     height: 500px;
-    background-image: url('/board.jpg');
+    background-image: url('/varda-rekisterointi/board.jpg');
     text-align: center;
     display: flex;
     flex-direction: column;
