--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
@@ -11,6 +11,7 @@
 }
 
 .ViestiButtons {
+    display: flex;
     padding: 0.5rem;
     border-bottom: 1px solid var(--border-color);
     border-radius: var(--border-radius);
@@ -18,6 +19,7 @@
 
 .ViestiButton {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 32px;
@@ -40,6 +42,10 @@
     border: 1px solid var(--border-color);
     border-radius: var(--border-radius);
     box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.17);
+}
+
+.ViestiButtonActive {
+    background: var(--color-gray-gray-lighten-6);
 }
 
 .ViestiButtonDisabled {
@@ -84,11 +90,6 @@
     width: 100%;
 }
 
-.Content textarea {
-    height: 120px;
-    resize: none;
-}
-
 .Row {
     display: flex;
     flex-direction: row;
@@ -109,13 +110,19 @@
     border-radius: var(--border-radius);
 }
 
-.Viesti > .ViestiTextarea {
+.Viesti .ViestiTextarea {
     border: none;
     box-shadow: none;
+    min-height: 200px;
 }
 
-.Viesti > .ViestiTextarea:hover,
-.Viesti > .ViestiTextarea:focus {
+.Viesti .ViestiTextarea p {
+    margin: 0;
+    padding: 8px;
+}
+
+.Viesti .ViestiTextarea:hover,
+.Viesti .ViestiTextarea:focus {
     border: none;
     box-shadow: none;
 }
