--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
@@ -12,9 +12,13 @@
 
 .ViestiButtons {
     display: flex;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem 0.5rem 0.5rem;
     border-bottom: 1px solid var(--border-color);
     border-radius: var(--border-radius);
+}
+
+.HeadingTypeSelector {
+    margin-left: auto;
 }
 
 .ViestiButton {
@@ -114,10 +118,6 @@
     border: none;
     box-shadow: none;
     min-height: 200px;
-}
-
-.Viesti .ViestiTextarea p {
-    margin: 0;
     padding: 8px;
 }
 
