OPHYK-74 Add button for underlining text to viesti editor

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/ViestiView.module.css
@@ -127,6 +127,10 @@
     box-shadow: none;
 }
 
+.LexicalThemeUnderline {
+    text-decoration: underline;
+}
+
 .Viesti:has(.ViestiTextarea:hover) {
     border-color: var(--color-primary-blue);
 }
